# claude-fleet

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  overlay.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: mobile.yml  notarize.yml  pages.yml  release.yml
claw-fleet-core/: Cargo.toml
claw-fleet-core/examples/: dump_guidance.rs  refresh_guidance.rs
claw-fleet-core/src/: agent_source.rs  backend.rs  claude_analyze.rs  claude_source.rs  codex_source.rs  consumer_heartbeat.rs  cursor.rs  daily_report.rs  elicitation.rs  guard.rs  hooks.rs  interaction_mode.rs  lib.rs  llm_provider.rs  openclaw_source.rs  pattern_update.rs  search_index.rs  session.rs
claw-fleet-desktop/: Cargo.toml  build.rs  entitlements-sidecar.plist  overlay.html  package-lock.json  package.json  tauri.conf.json  tray.html  vite.config.ts
claw-fleet-desktop/app/: App.tsx  audio.ts  main.tsx  storage.ts  store.ts  types.ts
claw-fleet-desktop/app/components/: AccountInfo.tsx  AuditView.module.css  AuditView.tsx  CostSpeedChart.tsx  DecisionPanel.module.css  DecisionPanel.tsx  GalleryView.tsx  LiteApp.module.css  LiteApp.tsx  LiteSessionCard.module.css  LiteSessionCard.tsx  MascotEyes.tsx  MascotEyesCore.tsx  MemoryPanel.module.css  MessageList.module.css  MessageList.tsx  MobileAccessPanel.module.css  Onboarding.tsx  SessionCard.module.css  SessionCard.tsx  SessionDetail.module.css  SessionDetail.tsx  SessionList.module.css  SessionList.tsx  SessionToolbar.module.css  SessionToolbar.tsx  SettingsPanel.module.css  SettingsPanel.tsx  TokenSpeedChart.module.css  TokenSpeedChart.tsx  UsagePanel.module.css  WaitingAlerts.module.css  WaitingAlerts.tsx  useCollapsed.ts
claw-fleet-desktop/app/components/blocks/: TextBlock.tsx
claw-fleet-desktop/app/components/mascot/: OctopusMascot.module.css
claw-fleet-desktop/app/components/report/: AISummaryCard.tsx  InsightsTimeline.tsx  LessonsCard.tsx
claw-fleet-desktop/app/hooks/: useDecisionEvents.ts
claw-fleet-desktop/app/locales/: en.json  zh.json
claw-fleet-desktop/app/markdown/: safeLinks.tsx
claw-fleet-desktop/app/mock/: data.ts  tauri-mock.ts
claw-fleet-desktop/capabilities/: default.json  overlay.json
claw-fleet-desktop/src/: gui.rs  lib.rs  local_backend.rs  main.rs  remote.rs
claw-fleet-mobile/: README.md  app.json  build-android.sh  build-ios.sh  eas.json  package-lock.json  package.json
claw-fleet-mobile/app/: _layout.tsx  index.tsx
claw-fleet-mobile/plugins/: withAndroidMinify.js
claw-fleet-mobile/src/: i18n.ts  mock.ts  theme.ts  types.ts
docs/: index.html
fleet-cli/: Cargo.toml
fleet-cli/src/: main.rs
scripts/: build-local.sh  generate-icons.sh  signing.local.example
skills/fleet/: SKILL.md
src/: App.css  App.tsx  OverlayApp.tsx  TrayApp.tsx  audio.ts  i18n.ts  overlay-main.tsx  storage.ts  store.ts  types.ts
src-tauri/: Cargo.toml  Cargo.toml.bak  build.rs  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsi
src-tauri/src/: account.rs  agent_source.rs  audit.rs  backend.rs  claude_analyze.rs  codex_source.rs  cursor.rs  daily_report.rs  embedded_server.rs  gui.rs  lib.rs  llm_provider.rs  local_backend.rs  openclaw_source.rs  pattern_update.rs  remote.rs  session.rs  (+4 more)
src-tauri/src-tauri/: .gitignore
(+53 files in other folders)
