[package]
name = "claw-fleet-core"
version = "26.4.11-dev.1775913003"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
tiny_http = "0.12"
percent-encoding = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
zstd = "0.13"
