[package]
name = "fleet-cli"
version = "26.4.11-dev.1775913003"
edition = "2021"
publish = false

[dependencies]
claw-fleet-core = { path = "../claw-fleet-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tiny_http = "0.12"
percent-encoding = "2"
libc = "0.2"
